--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 name                      : Messenger
 version                   : 3.0.0
-author                    : Peter Širka
+author                    : Alyssa Norton
 url                       : https://messenger.totaljs.com
 
 cookie                    : __user
